--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,7 @@
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 400;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
