--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @import "tailwindcss";
 
 body {
-  font-family: "Helvetica Neue", Helvetica,  sans-serif;
+  font-family: "Helvetica Neue";
   font-weight: 400;
   margin: 0;
   padding: 0;
