--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @import "tailwindcss";
 
 body {
-  font-family: "Helvetica Neue";
+  font-family: 'Helvetica Neue', sans-serif;
   font-weight: 400;
   margin: 0;
   padding: 0;
